--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
     <link href="styles.css" ref="stylesheet" />
     <script src="https://unpkg.com/vue"></script>
   </head>
-  <body></body>
+  <body>
+    <div id="vue-app">
+      <h1>
+        {{ name }}
+      </h1>
+    </div>
+    <script src="app.js"></script>
+  </body>
 </html>
