--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
   <body>
     <div id="vue-app">
       <h1>
-        {{ name }}
+        {{ greet("night") }}
       </h1>
+      <p>Name: {{ name }}</p>
+      <p>Job: {{ job }}</p>
     </div>
     <script src="app.js"></script>
   </body>
