--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       </h1>
       <p>Name: {{ name }}</p>
       <p>Job: {{ job }}</p>
+      <a :href="website" target="_blank">Sulay Sumaria</a>
+      <input type="text" :value="name" />
+      <p v-html="websiteTag"></p>
     </div>
     <script src="app.js"></script>
   </body>
