--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
       <p v-html="websiteTag"></p>
 
-      <button @click="addYear(1)">Add a year</button>
+      <button @click.once="addYear(1)">Add a year</button>
       <button @click="subtractYear(1)">Subtract a year</button>
 
       <button @dblclick="addYear(10)">Add 10 year</button>
@@ -32,6 +32,14 @@
       <p>My age is {{ age }}</p>
 
       <div id="canvas" @mousemove="updateXY">{{ x }}, {{ y }}</div>
+
+      <a
+        @click.prevent="click"
+        href="https://sulaysumaria.github.io"
+        target="_blank"
+      >
+        Sulay Sumaria
+      </a>
     </div>
     <script src="app.js"></script>
   </body>
