--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
       >
         Sulay Sumaria
       </a>
+
+      <label>Name</label>
+      <input type="text" @keyup.enter="logName" />
+      <label>Age</label>
+      <input type="text" @keyup.alt.enter="logAge" />
     </div>
     <script src="app.js"></script>
   </body>
