Two way data binding

--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
       </a>
 
       <label>Name</label>
-      <input type="text" @keyup.enter="logName" />
+      <input type="text" v-model="name" />
+      <span>{{ name }}</span>
       <label>Age</label>
-      <input type="text" @keyup.alt.enter="logAge" />
+      <input type="text" v-model="age" />
+      <span>{{ age }}</span>
     </div>
     <script src="app.js"></script>
   </body>
