--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
       <label>Age</label>
       <input type="text" v-model="age" />
       <span>{{ age }}</span>
+
+      <button @click="a++">Add to A</button>
+      <button @click="b++">Add to B</button>
+      <p>A - {{ a }}</p>
+      <p>B - {{ b }}</p>
+      <p>Age + a = {{ addToA }}</p>
+      <p>Age + b = {{ addToB }}</p>
     </div>
     <script src="app.js"></script>
   </body>
