--- a/index.html
+++ b/index.html
@@ -10,120 +10,16 @@
   </head>
   <body>
     <div id="vue-app">
-      <h1>
-        {{ greet("night") }}
-      </h1>
+      <div id="bag" :class="{burst: ended}"></div>
 
-      <h1>
-        Data Binding
-      </h1>
-      <p>Name: {{ name }}</p>
-      <p>Job: {{ job }}</p>
-
-      <a :href="website" target="_blank">Sulay Sumaria</a>
-
-      <input type="text" :value="name" />
-
-      <p v-html="websiteTag"></p>
-
-      <h1>
-        Events
-      </h1>
-      <button @click.once="addYear(1)">Add a year</button>
-      <button @click="subtractYear(1)">Subtract a year</button>
-
-      <button @dblclick="addYear(10)">Add 10 year</button>
-      <button @dblclick="subtractYear(10)">Subtract 10 year</button>
-
-      <p>My age is {{ age }}</p>
-
-      <div id="canvas" @mousemove="updateXY">{{ x }}, {{ y }}</div>
-
-      <h1>
-        Event modifiers
-      </h1>
-      <a
-        @click.prevent="click"
-        href="https://sulaysumaria.github.io"
-        target="_blank"
-      >
-        Sulay Sumaria
-      </a>
-
-      <h1>
-        Two way data binding
-      </h1>
-
-      <label>Name</label>
-      <input type="text" v-model="name" />
-      <span>{{ name }}</span>
-      <label>Age</label>
-      <input type="text" v-model="age" />
-      <span>{{ age }}</span>
-
-      <h1>
-        Computed Properties
-      </h1>
-
-      <button @click="a++">Add to A</button>
-      <button @click="b++">Add to B</button>
-      <p>A - {{ a }}</p>
-      <p>B - {{ b }}</p>
-      <p>Age + a = {{ addToA }}</p>
-      <p>Age + b = {{ addToB }}</p>
-
-      <h1>
-        Dynamic CSS Classes
-      </h1>
-
-      <div :class="{available: available}" @click="available = !available">
-        <span>Sulay</span>
+      <div id="bag-health">
+        <div :style="{width: health + '%'}"></div>
       </div>
 
-      <button @click="available = !available">Toggle Available</button>
-      <button @click="nearby = !nearby">Toggle Nearby</button>
-      <div :class="compClasses">
-        <span>Sumaria</span>
+      <div id="controls">
+        <button @click="punch" v-show="!ended">Punch</button>
+        <button @click="restart">Restart</button>
       </div>
-
-      <h1>
-        Conditionals
-      </h1>
-
-      <button @click="error = !error">Toggle Error</button>
-      <button @click="success = !success">Toggle Success</button>
-      <p v-if="error">
-        There is an error.
-      </p>
-      <p v-else-if="success">
-        Success
-      </p>
-      <p v-show="error">
-        There is a second error.
-      </p>
-      <p v-show="success">
-        Success!!
-      </p>
-
-      <h1>
-        Looping through lists
-      </h1>
-      <ul>
-        <li v-for="character in characters">
-          {{ character }}
-        </li>
-      </ul>
-      <ul>
-        <li v-for="(ninja, index) in ninjas">
-          {{ index }}. {{ ninja.name }} - {{ ninja.age }}
-        </li>
-      </ul>
-      <template v-for="(ninja, index) in ninjas">
-        <h3>{{ index }}. {{ ninja.name }} - {{ ninja.age }}</h3>
-      </template>
-      <template v-for="ninja in ninjas">
-        <div v-for="(val, key) in ninja">{{ key }} - {{ val }}</div>
-      </template>
     </div>
     <script src="app.js"></script>
   </body>
