--- a/index.html
+++ b/index.html
@@ -9,17 +9,28 @@
     <script src="https://unpkg.com/vue"></script>
   </head>
   <body>
-    <div id="vue-app">
-      <div id="bag" :class="{burst: ended}"></div>
+    <h1>
+      Multiple Vue instances
+    </h1>
+    <div id="vue-app-one">
+      <h2>
+        {{ title }}
+      </h2>
+      <p>
+        {{ greet }}
+      </p>
+    </div>
 
-      <div id="bag-health">
-        <div :style="{width: health + '%'}"></div>
-      </div>
-
-      <div id="controls">
-        <button @click="punch" v-show="!ended">Punch</button>
-        <button @click="restart">Restart</button>
-      </div>
+    <div id="vue-app-two">
+      <h2>
+        {{ title }}
+      </h2>
+      <p>
+        {{ greet }}
+      </p>
+      <button @click="changeTitle">
+        Change app one title
+      </button>
     </div>
     <script src="app.js"></script>
   </body>
