--- a/index.html
+++ b/index.html
@@ -14,23 +14,16 @@
     </h1>
     <div id="vue-app-one">
       <h2>
-        {{ title }}
+        Vue App One
       </h2>
-      <p>
-        {{ greet }}
-      </p>
+      <greeting></greeting>
     </div>
 
     <div id="vue-app-two">
       <h2>
-        {{ title }}
+        Vue App Two
       </h2>
-      <p>
-        {{ greet }}
-      </p>
-      <button @click="changeTitle">
-        Change app one title
-      </button>
+      <greeting></greeting>
     </div>
     <script src="app.js"></script>
   </body>
